--- a/src/assets/tailwind.src.css
+++ b/src/assets/tailwind.src.css
@@ -2,5 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.animate {
+  @apply transition duration-500 ease-in-out transform;
+}
+.animate:hover {
+  @apply -translate-y-1 scale-100;
+}
 
 /* npx tailwindcss build src/assets/tailwind.src.css -o src/assets/style.css */
