--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -32068,6 +32068,30 @@ video {
   animation: bounce 1s infinite;
 }
 
+.animate {
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
+}
+
+.animate:hover {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-translate-y: -0.25rem;
+}
+
+/* npx tailwindcss build src/assets/tailwind.src.css -o src/assets/style.css */
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
